--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,8 @@
     <script src="https://rawgit.com/Developer-Autodesk/library-javascript-view.and.data.api/master/js/Autodesk.ADN.Toolkit.Viewer.js"></script>
 
     <script src="/index.js"></script>
+    
+    <script src="/Viewing.Extension.Workshop.js"></script> 
 
 </head>
 
@@ -44,4 +46,5 @@
 	<div id="viewerDiv"></div>
 	
 </body>
+    
 </html>
